[package]
name = "hesai_sdk_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
autocxx = "0.26.0"
cxx = "1.0.116"
libc = "0.2.153"

[build-dependencies]
autocxx-build = "0.26.0"
bindgen = "0.69.4"
cmake = "0.1.50"
copy_to_output = { git = "https://github.com/organic-nailer/copy_to_output.git" }
miette = { version = "7.0.0", features = ["fancy"] }
